# xingyun_company

./: .dockerignore  .env.example  .gitignore  .python-version  1.css  Dockerfile  README.md  bot.py  commands.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  __main__.py  app.py  preload.py  routes.py  security.py
cache/: __init__.py  redis_client.py
db/: __init__.py  engine.py  models.py
docs/: ENGINEERING_PLAYBOOK.md
game_data/: buildings.json  company_levels.json  company_types.json  products.json  shop_items.json  tech_tree.json  weekly_quests.json
handlers/: ad.py  admin.py  ai_chat.py  ai_rd.py  battle.py  bounty.py  checkin.py  common.py  company.py  company_employees.py  company_helpers.py  company_ops.py  cooperation.py  demon_event.py  dividend.py  exchange.py  funds.py  product.py  quest.py  realestate.py  redpacket.py  research.py  roadshow.py  roulette.py  shareholder.py  slot_machine.py  start.py  total_war.py
keyboards/: menus.py
miniapp/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
scheduler/: daily_settlement.py
services/: ad_service.py  ai_chat_service.py  ai_rd_service.py  battle_service.py  bounty_service.py  checkin_service.py  company_service.py  cooperation_service.py  dividend_service.py  fundlog_service.py  integrity_service.py  operations_service.py  product_service.py  quest_service.py  random_events.py  realestate_service.py  redpacket_service.py  research_service.py  roadshow_service.py  roulette_service.py  settlement_service.py  shareholder_service.py  shop_service.py  (+2 more)
(+49 files in other folders)
