[project]
name = "my-company"
version = "0.2.0"
description = "商业帝国 - Telegram 公司经营游戏机器人"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4",
    "SQLAlchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "aiohttp-socks>=0.11.0",
    "asyncpg>=0.31.0",
]

[project.scripts]
mycompany = "bot:main"
